# Advent-of-Code-2022

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  aoc.cpp  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day14.cpp  day18.cpp  day19.cpp  main.cpp  template.cpp
